[tool.poetry]
name = "iftracer"
version = "0.1.0"
description = "iftracer helps to trace LLM models like gpt-4o-mini. Built on openllmetry"
authors = ["zhixuan <zhixuan@insightfinder.com>"]
license = "Apache-2.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
